@@ -4,13 +4,14 @@ v3.7.3:
   - Join heterogeneous sets are possible for tomography objects TS and tomograms.
  Developers:
   - Attribute _acquisition is initialized as None in TSBase, so the coppyAttributes callen in protocol for joining.
-    sets work properly.
+    sets work properly. The same whith the attribute _origin.
   - Method hasAcquisition re-defined in TSBase for the same reason exposed in the previous line.
   - Attribute _isHetereogeneous and accessors added to SetOfTomograms and SetOfTiltSeries. Used in the string
     representation of both objects.
   - TCL:
     * Attribute _isHetereogeneous checked in the corresponding sets.
     * Method checktomograms now is able to check the acquisition.
+    * Method checkTsOriginMatrix added.
 v3.7.2:
  Users:
    - Handling the matching in the ctf import(generalizing without the need to set patterns such as {TS}).
